WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196765
[GStreamer] Adaptive streaming playback broken with GStreamer < 1.12
https://bugs.webkit.org/show_bug.cgi?id=196765
Summary
[GStreamer] Adaptive streaming playback broken with GStreamer < 1.12
Philippe Normand
Reported
2019-04-10 01:33:39 PDT
GStreamer < 1.12 has an incomplete uridownloader implementation so we can't use WebKitWebSrc for adaptive fragments downloading if this version is detected.
Attachments
Patch
(12.62 KB, patch)
2019-04-10 01:40 PDT
,
Philippe Normand
calvaris
: review+
calvaris
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-04-10 01:40:24 PDT
Created
attachment 367110
[details]
Patch
Xabier Rodríguez Calvar
Comment 2
2019-04-10 02:09:15 PDT
Comment on
attachment 367110
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=367110&action=review
> Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:907 > + m_origins.add(WTFMove(origin));
Please, collapse these two lines: m_origins.add(SecurityOrigin::create(response.url()));
Philippe Normand
Comment 3
2019-04-10 02:14:35 PDT
Committed
r244109
: <
https://trac.webkit.org/changeset/244109
>
Radar WebKit Bug Importer
Comment 4
2019-04-10 02:15:19 PDT
<
rdar://problem/49768460
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug